--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -2,8 +2,8 @@
   <h1 class="hidden">Abaco Aggregate &amp; Cement Ltd.</h1>
   <div class="[ x--wide relative h--100 ]">
     <div class="[ hero__text ch--54 ]">
-      <h2>{{ .hero.heading }}</h2>
-      <p>{{ .hero.tagline }}</p>
+      <h2>{{ $.Param "hero.heading" }}</h2>
+      <p>{{ $.Param "hero.tagline" }}</p>
     </div>
   </div>
   <video class="video" src="https://res.cloudinary.com/abaco-aggregate/video/upload/q_auto/aac_crlm2m.mp4" data-poster="https://abacoaggregate.net/uploads/concrete-mixer-operator.jpg" preload="auto" autoplay muted loop playsinline></video>
