adding title field to gallery

--- a/layouts/_default/gallery/list.html
+++ b/layouts/_default/gallery/list.html
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <!-- Site Title-->
-    <title>Gallery | Abaco Aggregate And Cement Ltd.</title>
+    <title>{{ print .Title }} | Abaco Aggregate And Cement Ltd.</title>
     <!-- Site Description-->
     <meta name="description" content="This is a template.">
     <!-- Responsive Tag-->
