--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -10,7 +10,7 @@
       <div class="[ slider ]">
         <div class="[ slider__wrapper ]">
           <ul class="slider__track no-list-style">
-            {{ range .profile.slides }}
+            {{ range .Params.profile.slides }}
             <li class="[ slide ]">
               <figure class="[ slide__img ]"><img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://abacoaggregate.net{{ .slide }}" data-sizes="auto" alt="{{ .alt }}">
               </figure>
