--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -58,7 +58,7 @@
     {{ partial "hero" . }}
     {{ partial "products" . }}
     {{ partial "profile" . }}
-    {{ partial "highlight" . }}
+    {{ partial "highlights" . }}
     {{ partial "contact" . }}
     </main>
     <footer class="footer">
