--- a/layouts/_default/gallery/list.html
+++ b/layouts/_default/gallery/list.html
@@ -51,6 +51,7 @@
     <main class="[ main ] [ x--wide ] " id="main">
       <h1 class="[ gallery__heading ]">Gallery</h1>
       <!-- Images used to open the lightbox-->
+      {{ partial "slider" . }}
       <ul class="[ grid x2--sm x4--md ]">
         <li class="[ thumb ]" thumbnail><img class="hover-shadow lazyload" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://abaco-aggregate.netlify.app/uploads/abaco-aggregate-cement.jpg" data-sizes="auto" alt="">
         </li>
