--- a/layouts/partials/profile.html
+++ b/layouts/partials/profile.html
@@ -12,7 +12,7 @@
           <ul class="slider__track no-list-style">
             {{ range .Params.slider }}
             <li class="[ slide ]">
-              <figure class="[ slide__img ]"><img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="{{ .slide }}" data-sizes="auto" alt="{{ .alt }}">
+              <figure class="[ slide__img ]"><img class="lazyload" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="{{ . | relURL }}" data-sizes="auto" alt="{{ .alt }}">
               </figure>
             </li>
             {{ end }}
