working gallery without alt or caption

--- a/layouts/partials/gallery.html
+++ b/layouts/partials/gallery.html
@@ -1,7 +1,7 @@
 <ul class="[ grid x2--sm x4--md ]">
   {{ range .Params.gallery }}
   <li class="[ thumb ]" thumbnail>
-    <img class="hover-shadow lazyload" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="{{ .image }}" data-sizes="auto" alt={{ .alt }}>
+    <img class="hover-shadow lazyload" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="{{ . | relURL }}" data-sizes="auto" alt="">
   </li>
   {{ end }}
   <!-- </li>
@@ -14,10 +14,8 @@
     {{ range .Params.gallery }}
     <div class="mySlides">
       <figure>
-        <img src="{{ .image }}" alt="{{ .alt }}" galleryImage>
-        {{ if .caption }}
-        <figcaption class="caption">{{ .caption }}</figcaption>
-        {{ end }}
+        <img src="{{ . | relURL }}" alt="" galleryImage>
+        <!-- <figcaption class="caption">{{ .caption }}</figcaption> -->
       </figure>
     </div>
     {{ end }}
