--- a/layouts/partials/gallery.html
+++ b/layouts/partials/gallery.html
@@ -15,7 +15,7 @@
     <div class="mySlides">
       <figure>
         <img src="{{ . | relURL }}" alt="" galleryImage>
-        <!-- <figcaption class="caption">{{ .caption }}</figcaption> -->
+        <!-- <figcaption class="caption"></figcaption> -->
       </figure>
     </div>
     {{ end }}
