--- a/layouts/partials/gallery.html
+++ b/layouts/partials/gallery.html
@@ -1,30 +1,35 @@
 <ul class="[ grid x2--sm x4--md ]">
   {{ range .Params.gallery }}
-  <li class="[ thumb ]" thumbnail>
-    <img class="hover-shadow lazyload" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="{{ . | relURL }}" data-sizes="auto" alt="">
+  <li class="[ thumb {{ if .youtube }}thumb--yt{{ end }} ]" thumbnail>
+    <img class="hover-shadow lazyload" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="{{ .image }}" data-sizes="auto" alt="{{ .alt }}">
   </li>
   {{ end }}
-  <!-- </li>
-  <li class="[  thumb thumb--yt ]" thumbnail><img class="hover-shadow lazyload" src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs=" data-src="https://abaco-aggregate.netlify.app/uploads/abaco-aggregate-cement.jpg" data-sizes="auto" alt="">
-  </li> -->
 </ul>
 <!-- The Modal/Lightbox-->
 <div class="[ modal ] [ flex--middle ]" id="myModal"><span class="close cursor" id="close">×</span>
   <div class="[ modal-content ]">
     {{ range .Params.gallery }}
+    {{ if .youtube }}
+    <div class="[ mySlides mySlides--yt ]" galleryImage>
+      <div class="[ wrapper ]">
+        <iframe class="[ youtube ]" src="https://www.youtube.com/embed/{{ .youtube }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="560" height="315"></iframe>
+      </div>
+      {{ if .caption }}
+      <p class="caption">{{ .caption }}</p>
+      {{ end }}
+    </div>
+    {{ else }}
     <div class="mySlides">
       <figure>
-        <img src="{{ . | relURL }}" alt="" galleryImage>
-        <!-- <figcaption class="caption"></figcaption> -->
+        <img src="{{ .image }}" alt="{{ .alt }}" galleryImage>
+        {{ if .caption }}
+        <figcaption class="caption">{{ .caption }}</figcaption> 
+        {{ end }}
       </figure>
     </div>
     {{ end }}
-    <!-- <div class="[ mySlides mySlides--yt ]" galleryImage>
-      <div class="[ wrapper ]">
-        <iframe class="[ youtube ]" src="https://www.youtube.com/embed/hszFNFHSNSA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width="560" height="315"></iframe>
-      </div>
-      <p class="caption">This is a ction.</p>
-    </div> -->
+    {{ end }}
+    
     <!-- Next/previous controls--><a class="[ directional ]" id="prev">❮</a><a class="[ directional ]" id="next">❯</a>
   </div>
 </div>
