working everything almost. still need width and height.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,7 +4,9 @@
         {{ partial "hero" . }}
         {{ partial "products" . }}
         {{ partial "profile" . }}
+        {{ partial "highlights" . }}
         {{ partial "contact" . }}
+        
 
     {{ else }}
 
