placing fields in label

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -27,8 +27,8 @@
           <label for="email">This field is not for humans.</label>
           <input id="email" type="email" name="email" autocomplete="off">
         </div>
-        <input id="lead-source" type="hidden" name="lead-source" value="Abaco Aggregate Website">
-        <input id="lead-url" type="hidden" name="lead-url" value="https://abacoaggregate.net">
+        <label for="lead-source"><input id="lead-source" type="hidden" name="lead-source" value="Abaco Aggregate Website"></label>
+        <label for="lead-url"><input id="lead-url" type="hidden" name="lead-url" value="https://abacoaggregate.net"></label>
         <div class="[ form__submit ]">
           <input class="[ btn btn--black btn--solid--lg ]" id="submit" type="submit" name="submit" value="Send">
         </div>
