added search meta tag

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,6 +28,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.json">
     <!-- Site Favicons - END-->
+
+    <meta name="google-site-verification" content="4h_c66UMc1lcA0J0KpN7VaOMOUZKgqmKeCGLvj4_d4U" />
   </head>
   <body>
     <input id="click" type="checkbox" aria-checked="false" tabindex="0" aria-labelledby="menu-prompt">
