--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,6 +30,15 @@
     <!-- Site Favicons - END-->
 
     <meta name="google-site-verification" content="4h_c66UMc1lcA0J0KpN7VaOMOUZKgqmKeCGLvj4_d4U" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-03DRMJRP27"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-03DRMJRP27');
+    </script>
   </head>
   <body>
     <input id="click" type="checkbox" aria-checked="false" tabindex="0" aria-labelledby="menu-prompt">
