disabled validation for form

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -67,7 +67,7 @@
     </footer>
     {{ if .IsHome }}
     <script src="/scripts/obscure-{{ .Site.Data.assets.version }}.min.js" defer></script>
-    <script src="/scripts/validate-{{ .Site.Data.assets.version }}.min.js" defer></script>
+    <!-- <script src="/scripts/validate-{{ .Site.Data.assets.version }}.min.js" defer></script> -->
     <script src="/scripts/slide-nav-{{ .Site.Data.assets.version }}.min.js"></script>
     {{ else }}
     <script src="/scripts/lightgallery-{{ .Site.Data.assets.version }}.min.js"></script>
